--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,17 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/durable-circle-433106-g9/angular-app6:latest', '.']
+  args: ['build', '-t', 'gcr.io/my-project-1-433804/angular-app:latest', '.']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/durable-circle-433106-g9/angular-app6:latest']
+  args: ['push', 'gcr.io/my-project-1-433804/angular-app:latest']
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
   - 'run'
   - 'deploy'
-  - 'angular-app6'
+  - 'angular-app'
   - '--image'
-  - 'gcr.io/durable-circle-433106-g9/angular-app6:latest'
+  - 'gcr.io/my-project-1-433804/angular-app:latest'
   - '--platform'
   - 'managed'
   - '--region'
@@ -19,7 +19,7 @@ steps:
   - '--allow-unauthenticated'
 
 images:
-- 'gcr.io/durable-circle-433106-g9/angular-app6:latest'
+- 'gcr.io/my-project-1-433804/angular-app:latest'
 
 options:
   default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
